add AppRevision label to cuetemplate

--- a/charts/vela-core/templates/defwithtemplate/ingress.yaml
+++ b/charts/vela-core/templates/defwithtemplate/ingress.yaml
@@ -37,7 +37,8 @@ spec:
         		name: context.name
         	spec: {
         		selector: {
-        			"app.oam.dev/component": context.name
+        			"app.oam.dev/component":   context.name
+        			"app.oam.dev/appRevision": context.appRevision
         		}
         		ports: [
         			for k, v in parameter.http {
