--- a/charts/vela-core/templates/defwithtemplate/worker.yaml
+++ b/charts/vela-core/templates/defwithtemplate/worker.yaml
@@ -19,12 +19,14 @@ spec:
         	kind:       "Deployment"
         	spec: {
         		selector: matchLabels: {
-        			"app.oam.dev/component": context.name
+        			"app.oam.dev/component":   context.name
+        			"app.oam.dev/appRevision": context.appRevision
         		}
         
         		template: {
         			metadata: labels: {
-        				"app.oam.dev/component": context.name
+        				"app.oam.dev/component":   context.name
+        				"app.oam.dev/appRevision": context.appRevision
         			}
         
         			spec: {
