--- a/charts/vela-core/templates/defwithtemplate/webservice.yaml
+++ b/charts/vela-core/templates/defwithtemplate/webservice.yaml
@@ -20,11 +20,17 @@ spec:
         	spec: {
         		selector: matchLabels: {
         			"app.oam.dev/component": context.name
+        			if parameter.addRevisionLabel {
+        				"app.oam.dev/appRevision": context.appRevision
+        			}
         		}
         
         		template: {
         			metadata: labels: {
         				"app.oam.dev/component": context.name
+        				if parameter.addRevisionLabel {
+        					"app.oam.dev/appRevision": context.appRevision
+        				}
         			}
         
         			spec: {
@@ -91,5 +97,8 @@ spec:
         	}]
         	// +usage=Number of CPU units for the service, like `0.5` (0.5 CPU core), `1` (1 CPU core)
         	cpu?: string
+        
+        	// If addRevisionLabel is true, the appRevision label will be added to the underlying pods 
+        	addRevisionLabel: *false | bool
         }
         
