--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -264,6 +264,9 @@ jobs:
 
   build-cli:
     runs-on: ubuntu-latest
+    needs: detect-noop
+    if: needs.detect-noop.outputs.noop != 'true'
+
     steps:
       - name: Set up Go 1.14
         uses: actions/setup-go@v1
