--- a/.github/workflows/release-docs.yaml
+++ b/.github/workflows/release-docs.yaml
@@ -7,7 +7,7 @@ on:
       - master
       - release-*
 jobs:
-  website:
+  release-website:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
