use shell instead action to sync website && don't sync index.js and config.js

--- a/.github/workflows/release-docs.yaml
+++ b/.github/workflows/release-docs.yaml
@@ -11,11 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
       - name: Sync to kubevela.io Repo
-        uses: wonderflow/auto-docs-action@v0.2.3
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.GH_PAGES_DEPLOY }}
+          SSH_DEPLOY_KEY: ${{ secrets.GH_PAGES_DEPLOY }}
           VERSION: ${{ github.ref }}
           COMMIT_ID: ${{ github.sha }}
-        with:
-          gh-page: git@github.com:oam-dev/kubevela.io.git
+        run: |
+          sh ./hack/website/release.sh
