use shell instead action to sync website && don't sync index.js and config.js (#1386)
* use shell instead action to sync website && don't sync index.js and config.js

* update test website build

* use bash instead sh

--- a/.github/workflows/check-docs.yml
+++ b/.github/workflows/check-docs.yml
@@ -15,5 +15,7 @@ jobs:
         with:
           node-version: '12.x'
       - name: Test Build
+        env:
+          VERSION: ${{ github.ref }}
         run: |
-          sh ./hack/website/test-build.sh
+          bash ./hack/website/test-build.sh
