--- a/charts/vela-core/crds/core.oam.dev_applications.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applications.yaml
@@ -25,10 +25,31 @@ spec:
     kind: Application
     listKind: ApplicationList
     plural: applications
+    shortNames:
+    - apps
     singular: application
   scope: Namespaced
   versions:
-  - name: v1alpha2
+  - additionalPrinterColumns:
+    - jsonPath: .spec.components[*].name
+      name: COMPONENT
+      type: string
+    - jsonPath: .spec.components[*].type
+      name: TYPE
+      type: string
+    - jsonPath: .status.status
+      name: PHASE
+      type: string
+    - jsonPath: .status.services[*].healthy
+      name: HEALTHY
+      type: boolean
+    - jsonPath: .status.services[*].message
+      name: STATUS
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: AGE
+      type: date
+    name: v1alpha2
     schema:
       openAPIV3Schema:
         description: Application is the Schema for the applications API
@@ -463,7 +484,26 @@ spec:
     storage: false
     subresources:
       status: {}
-  - name: v1beta1
+  - additionalPrinterColumns:
+    - jsonPath: .spec.components[*].name
+      name: COMPONENT
+      type: string
+    - jsonPath: .spec.components[*].type
+      name: TYPE
+      type: string
+    - jsonPath: .status.status
+      name: PHASE
+      type: string
+    - jsonPath: .status.services[*].healthy
+      name: HEALTHY
+      type: boolean
+    - jsonPath: .status.services[*].message
+      name: STATUS
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: AGE
+      type: date
+    name: v1beta1
     schema:
       openAPIV3Schema:
         description: Application is the Schema for the applications API
