fine tune the logic and adjust e2e test

--- a/docs/examples/cloneset-rollout/appRollout-scale.yaml
+++ b/docs/examples/cloneset-rollout/appRollout-scale.yaml
@@ -8,8 +8,10 @@ spec:
   componentList:
     - metrics-provider
   rolloutPlan:
+    targetSize: 6
     rolloutStrategy: "IncreaseFirst"
     rolloutBatches:
-      - replicas: 10%
-      - replicas: 2
-      - replicas: 2
+      - replicas: 1
+      - replicas: 20%
+      - replicas: 40%
+      - replicas: 40%
