--- a/docs/examples/cloneset-rollout/app-scale.yaml
+++ b/docs/examples/cloneset-rollout/app-scale.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1beta1
 kind: Application
 metadata:
-  name: test-rolling-pause
+  name: test-rolling
   annotations:
     "app.oam.dev/rollout-template": "true"
 spec:
@@ -12,7 +12,6 @@ spec:
         cmd:
           - ./podinfo
           - stress-cpu=1
-        image: stefanprodan/podinfo:4.0.3
+        image: stefanprodan/podinfo:4.0.6
         port: 8080
         updateStrategyType: InPlaceIfPossible
-        replicas: 10
