--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -167,6 +167,8 @@ jobs:
         run: |
           make e2e-cleanup
           make e2e-setup
+          helm lint ./charts/vela-core
+          helm test -n vela-system kubevela --timeout 5m
 
       - name: Wait for e2e preparation ready
         run: |
