--- a/charts/vela-core/crds/core.oam.dev_resourcetrackers.yaml
+++ b/charts/vela-core/crds/core.oam.dev_resourcetrackers.yaml
@@ -33,9 +33,9 @@ spec:
           status:
             description: ResourceTrackerStatus define the status of resourceTracker
             properties:
-              trackresources:
+              trackedresources:
                 items:
-                  description: A TypedReference refers to an object by Name, Kind, and APIVersion. It is commonly used to reference namespaced-scoped objects
+                  description: A TypedReference refers to an object by Name, Kind, and APIVersion. It is commonly used to reference cross namespace objects
                   properties:
                     apiVersion:
                       description: APIVersion of the referenced object.
