--- a/charts/vela-core/crds/core.oam.dev_resourcetrackers.yaml
+++ b/charts/vela-core/crds/core.oam.dev_resourcetrackers.yaml
@@ -33,7 +33,7 @@ spec:
           status:
             description: ResourceTrackerStatus define the status of resourceTracker
             properties:
-              trackedresources:
+              trackedResources:
                 items:
                   description: A TypedReference refers to an object by Name, Kind, and APIVersion. It is commonly used to reference cross namespace objects
                   properties:
@@ -47,7 +47,7 @@ spec:
                       description: Name of the referenced object.
                       type: string
                     namespace:
-                      description: Namespace of the referenced object.
+                      description: Namespace of the objects outside the application namespace.
                       type: string
                     uid:
                       description: UID of the referenced object.
