--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_resourcetrackers.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_resourcetrackers.yaml
@@ -33,7 +33,7 @@ spec:
           properties:
             trackedResources:
               items:
-                description: A TypedReference refers to an object by Name, Kind, and APIVersion. It is commonly used to reference cross namespace objects
+                description: A TypedReference refers to an object by Name, Kind, and APIVersion. It is commonly used to reference across-namespace objects
                 properties:
                   apiVersion:
                     description: APIVersion of the referenced object.
