Add a new cloneset scale controller (#1301)
* add scale implementation

* fine tune the logic and adjust e2e test

* fix tests and fine tune logic

* try to fix flaky verification

* allow zero size step

* fix scale down check

--- a/charts/vela-core/crds/core.oam.dev_applicationrevisions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applicationrevisions.yaml
@@ -413,8 +413,12 @@ spec:
                       rollingState:
                         description: RollingState is the Rollout State
                         type: string
+                      rolloutOriginalSize:
+                        description: RolloutTargetSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
+                        format: int32
+                        type: integer
                       rolloutTargetSize:
-                        description: RolloutTargetTotalSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
+                        description: RolloutTargetSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
                         format: int32
                         type: integer
                       services:
@@ -1461,8 +1465,12 @@ spec:
                       rollingState:
                         description: RollingState is the Rollout State
                         type: string
+                      rolloutOriginalSize:
+                        description: RolloutTargetSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
+                        format: int32
+                        type: integer
                       rolloutTargetSize:
-                        description: RolloutTargetTotalSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
+                        description: RolloutTargetSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
                         format: int32
                         type: integer
                       services:
