--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_approllouts.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_approllouts.yaml
@@ -339,8 +339,12 @@ spec:
             rollingState:
               description: RollingState is the Rollout State
               type: string
+            rolloutOriginalSize:
+              description: RolloutTargetSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
+              format: int32
+              type: integer
             rolloutTargetSize:
-              description: RolloutTargetTotalSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
+              description: RolloutTargetSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
               format: int32
               type: integer
             targetGeneration:
