--- a/charts/vela-core/crds/core.oam.dev_traitdefinitions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_traitdefinitions.yaml
@@ -72,7 +72,7 @@ spec:
                 type: object
                 x-kubernetes-preserve-unknown-fields: true
               podDisruptive:
-                description: 'PodDisruptive specifies whether using the trait will cause the pod to restart Valid values are: - "unknown" (default): disruptive unknown - "yes": cause the pod to restart - "no": will not cause the pod restart'
+                description: 'PodDisruptive specifies whether using the trait will cause the pod to restart. Valid values are: - "unknown" (default): disruptive unknown - "yes": cause the pod to restart - "no": will not cause the pod restart'
                 enum:
                 - unknown
                 - "yes"
@@ -259,7 +259,7 @@ spec:
                 type: object
                 x-kubernetes-preserve-unknown-fields: true
               podDisruptive:
-                description: 'PodDisruptive specifies whether using the trait will cause the pod to restart Valid values are: - "unknown" (default): disruptive unknown - "yes": cause the pod to restart - "no": will not cause the pod restart'
+                description: 'PodDisruptive specifies whether using the trait will cause the pod to restart. Valid values are: - "unknown" (default): disruptive unknown - "yes": cause the pod to restart - "no": will not cause the pod restart'
                 enum:
                 - unknown
                 - "yes"
