use bool type for podDisruptive

--- a/docs/examples/dry-run/definitions/myingress.yaml
+++ b/docs/examples/dry-run/definitions/myingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   appliesToWorkloads:
     - "*"
-  podDisruptive: "no"
+  podDisruptive: false
   schematic:
     cue:
       template: |
