--- a/docs/examples/registry/for-loop.yaml
+++ b/docs/examples/registry/for-loop.yaml
@@ -4,7 +4,7 @@ metadata:
   name: expose
   namespace: vela-system
 spec:
-  podDisruptive: "no"
+  podDisruptive: false
   schematic:
     cue:
       template: |-
