--- a/hack/vela-templates/definitions/ingress.yaml
+++ b/hack/vela-templates/definitions/ingress.yaml
@@ -20,7 +20,7 @@ spec:
   appliesToWorkloads:
     - webservice
     - worker
-  podDisruptive: "no"
+  podDisruptive: false
   schematic:
     cue:
       template: |
