--- a/charts/vela-core/crds/core.oam.dev_applicationrevisions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applicationrevisions.yaml
@@ -758,12 +758,8 @@ spec:
                           type: object
                           x-kubernetes-preserve-unknown-fields: true
                         podDisruptive:
-                          description: 'PodDisruptive specifies whether using the trait will cause the pod to restart. Valid values are: - "unknown" (default): disruptive unknown - "yes": cause the pod to restart - "no": will not cause the pod restart'
-                          enum:
-                          - unknown
-                          - "yes"
-                          - "no"
-                          type: string
+                          description: PodDisruptive specifies whether using the trait will cause the pod to restart or not.
+                          type: boolean
                         revisionEnabled:
                           description: Revision indicates whether a trait is aware of component revision
                           type: boolean
@@ -1814,12 +1810,8 @@ spec:
                           type: object
                           x-kubernetes-preserve-unknown-fields: true
                         podDisruptive:
-                          description: 'PodDisruptive specifies whether using the trait will cause the pod to restart. Valid values are: - "unknown" (default): disruptive unknown - "yes": cause the pod to restart - "no": will not cause the pod restart'
-                          enum:
-                          - unknown
-                          - "yes"
-                          - "no"
-                          type: string
+                          description: PodDisruptive specifies whether using the trait will cause the pod to restart or not.
+                          type: boolean
                         revisionEnabled:
                           description: Revision indicates whether a trait is aware of component revision
                           type: boolean
