--- a/docs/examples/kube-module/virtual-group-td.yaml
+++ b/docs/examples/kube-module/virtual-group-td.yaml
@@ -9,7 +9,7 @@ spec:
     - webservice
     - worker
     - deployments.apps
-  podDisruptive: "yes"
+  podDisruptive: true
   extension:
     template: |-
       patch: {
