--- a/docs/examples/registry/patch-replica.yaml
+++ b/docs/examples/registry/patch-replica.yaml
@@ -9,7 +9,7 @@ spec:
   appliesToWorkloads:
     - webservice
     - worker
-  podDisruptive: "yes"
+  podDisruptive: true
   schematic:
     cue:
       template: |-
