--- a/docs/examples/registry/rollout.yaml
+++ b/docs/examples/registry/rollout.yaml
@@ -12,7 +12,7 @@ spec:
     name: canaries.flagger.app
   workloadRefPath: spec.targetRef
   revisionEnabled: true
-  podDisruptive: "yes"
+  podDisruptive: true
   extension:
     install:
       helm:
