--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
@@ -753,12 +753,8 @@ spec:
                         type: object
                         
                       podDisruptive:
-                        description: 'PodDisruptive specifies whether using the trait will cause the pod to restart. Valid values are: - "unknown" (default): disruptive unknown - "yes": cause the pod to restart - "no": will not cause the pod restart'
-                        enum:
-                        - unknown
-                        - "yes"
-                        - "no"
-                        type: string
+                        description: PodDisruptive specifies whether using the trait will cause the pod to restart or not.
+                        type: boolean
                       revisionEnabled:
                         description: Revision indicates whether a trait is aware of component revision
                         type: boolean
