--- a/charts/vela-core/crds/core.oam.dev_applicationrevisions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applicationrevisions.yaml
@@ -761,6 +761,9 @@ spec:
                           description: Extension is used for extension needs by OAM platform builders
                           type: object
                           x-kubernetes-preserve-unknown-fields: true
+                        podDisruptive:
+                          description: PodDisruptive specifies whether using the trait will cause the pod to restart or not.
+                          type: boolean
                         revisionEnabled:
                           description: Revision indicates whether a trait is aware of component revision
                           type: boolean
@@ -1814,6 +1817,9 @@ spec:
                           description: Extension is used for extension needs by OAM platform builders
                           type: object
                           x-kubernetes-preserve-unknown-fields: true
+                        podDisruptive:
+                          description: PodDisruptive specifies whether using the trait will cause the pod to restart or not.
+                          type: boolean
                         revisionEnabled:
                           description: Revision indicates whether a trait is aware of component revision
                           type: boolean
