--- a/charts/vela-core/crds/core.oam.dev_traitdefinitions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_traitdefinitions.yaml
@@ -71,6 +71,9 @@ spec:
                 description: Extension is used for extension needs by OAM platform builders
                 type: object
                 x-kubernetes-preserve-unknown-fields: true
+              podDisruptive:
+                description: PodDisruptive specifies whether using the trait will cause the pod to restart or not.
+                type: boolean
               revisionEnabled:
                 description: Revision indicates whether a trait is aware of component revision
                 type: boolean
@@ -251,6 +254,9 @@ spec:
                 description: Extension is used for extension needs by OAM platform builders
                 type: object
                 x-kubernetes-preserve-unknown-fields: true
+              podDisruptive:
+                description: PodDisruptive specifies whether using the trait will cause the pod to restart or not.
+                type: boolean
               revisionEnabled:
                 description: Revision indicates whether a trait is aware of component revision
                 type: boolean
