--- a/docs/examples/registry/kautoscale.yaml
+++ b/docs/examples/registry/kautoscale.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   appliesToWorkloads:
     - webservice # this should be some knative like workload
+  podDisruptive: true
   schematic:
     cue:
       template: |-
