--- a/docs/examples/registry/route.yaml
+++ b/docs/examples/registry/route.yaml
@@ -11,6 +11,7 @@ spec:
   workloadRefPath: spec.workloadRef
   definitionRef:
     name: routes.standard.oam.dev
+  podDisruptive: false
   extension:
     install:
       helm:
