Remove redundant and ambiguous short names

--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_resourcetrackers.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_resourcetrackers.yaml
@@ -15,7 +15,7 @@ spec:
     listKind: ResourceTrackerList
     plural: resourcetrackers
     shortNames:
-    - rt
+    - tracker
     singular: resourcetracker
   scope: Cluster
   subresources:
