Add short name for crds

--- a/charts/vela-core/crds/core.oam.dev_appdeployments.yaml
+++ b/charts/vela-core/crds/core.oam.dev_appdeployments.yaml
@@ -16,6 +16,7 @@ spec:
     plural: appdeployments
     shortNames:
     - appdeploy
+    - appdpy
     singular: appdeployment
   scope: Namespaced
   versions:
