--- a/charts/vela-core/crds/core.oam.dev_applications.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applications.yaml
@@ -26,6 +26,7 @@ spec:
     listKind: ApplicationList
     plural: applications
     shortNames:
+    - app
     - apps
     singular: application
   scope: Namespaced
