--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationconfigurations.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationconfigurations.yaml
@@ -16,6 +16,7 @@ spec:
     plural: applicationconfigurations
     shortNames:
     - appconfig
+    - config
     singular: applicationconfiguration
   scope: Namespaced
   subresources:
