--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationcontexts.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationcontexts.yaml
@@ -16,6 +16,7 @@ spec:
     plural: applicationcontexts
     shortNames:
     - appcontext
+    - context
     singular: applicationcontext
   scope: Namespaced
   subresources:
