--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
@@ -16,7 +16,7 @@ spec:
     plural: applicationrevisions
     shortNames:
     - apprev
-    - revisions
+    - revision
     singular: applicationrevision
   scope: Namespaced
   validation:
