--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
@@ -15,6 +15,7 @@ spec:
     listKind: ApplicationList
     plural: applications
     shortNames:
+    - app
     - apps
     singular: application
   scope: Namespaced
