--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_healthscopes.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_healthscopes.yaml
@@ -18,6 +18,8 @@ spec:
     kind: HealthScope
     listKind: HealthScopeList
     plural: healthscopes
+    shortNames:
+    - hs
     singular: healthscope
   scope: Namespaced
   subresources:
