--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_scopedefinitions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_scopedefinitions.yaml
@@ -18,6 +18,9 @@ spec:
     kind: ScopeDefinition
     listKind: ScopeDefinitionList
     plural: scopedefinitions
+    shortNames:
+    - sd
+    - scope
     singular: scopedefinition
   scope: Namespaced
   subresources: {}
