--- a/legacy/charts/vela-core-legacy/crds/standard.oam.dev_podspecworkloads.yaml
+++ b/legacy/charts/vela-core-legacy/crds/standard.oam.dev_podspecworkloads.yaml
@@ -14,6 +14,8 @@ spec:
     kind: PodSpecWorkload
     listKind: PodSpecWorkloadList
     plural: podspecworkloads
+    shortNames:
+    - psw
     singular: podspecworkload
   scope: Namespaced
   subresources:
