--- a/charts/vela-core/crds/core.oam.dev_healthscopes.yaml
+++ b/charts/vela-core/crds/core.oam.dev_healthscopes.yaml
@@ -14,6 +14,8 @@ spec:
     kind: HealthScope
     listKind: HealthScopeList
     plural: healthscopes
+    shortNames:
+    - hs
     singular: healthscope
   scope: Namespaced
   versions:
