--- a/charts/vela-core/crds/core.oam.dev_manualscalertraits.yaml
+++ b/charts/vela-core/crds/core.oam.dev_manualscalertraits.yaml
@@ -14,6 +14,8 @@ spec:
     kind: ManualScalerTrait
     listKind: ManualScalerTraitList
     plural: manualscalertraits
+    shortNames:
+    - mst
     singular: manualscalertrait
   scope: Namespaced
   versions:
