--- a/charts/vela-core/crds/core.oam.dev_resourcetrackers.yaml
+++ b/charts/vela-core/crds/core.oam.dev_resourcetrackers.yaml
@@ -14,6 +14,8 @@ spec:
     kind: ResourceTracker
     listKind: ResourceTrackerList
     plural: resourcetrackers
+    shortNames:
+    - rt
     singular: resourcetracker
   scope: Cluster
   versions:
