--- a/charts/vela-core/crds/core.oam.dev_scopedefinitions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_scopedefinitions.yaml
@@ -14,6 +14,9 @@ spec:
     kind: ScopeDefinition
     listKind: ScopeDefinitionList
     plural: scopedefinitions
+    shortNames:
+    - sd
+    - scope
     singular: scopedefinition
   scope: Namespaced
   versions:
