--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_containerizedworkloads.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_containerizedworkloads.yaml
@@ -14,6 +14,8 @@ spec:
     kind: ContainerizedWorkload
     listKind: ContainerizedWorkloadList
     plural: containerizedworkloads
+    shortNames:
+    - cw
     singular: containerizedworkload
   scope: Namespaced
   subresources:
