make sure we don't create more pods

--- a/test/e2e-test/testdata/rollout/cloneset/app-no-replica.yaml
+++ b/test/e2e-test/testdata/rollout/cloneset/app-no-replica.yaml
@@ -14,4 +14,4 @@ spec:
           - stress-cpu=1
         image: stefanprodan/podinfo:4.0.3
         port: 8080
-        updateStrategyType: InPlaceIfPossible
+        updateStrategyType: InPlaceOnly
