--- a/charts/vela-core/crds/core.oam.dev_applicationrevisions.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applicationrevisions.yaml
@@ -446,6 +446,17 @@ spec:
                                 - type
                                 type: object
                               type: array
+                            workloadDefinition:
+                              description: WorkloadDefinition is the definition of a WorkloadDefinition, such as deployments/apps.v1
+                              properties:
+                                apiVersion:
+                                  type: string
+                                kind:
+                                  type: string
+                              required:
+                              - apiVersion
+                              - kind
+                              type: object
                           required:
                           - healthy
                           - name
@@ -1501,6 +1512,17 @@ spec:
                                 - type
                                 type: object
                               type: array
+                            workloadDefinition:
+                              description: WorkloadDefinition is the definition of a WorkloadDefinition, such as deployments/apps.v1
+                              properties:
+                                apiVersion:
+                                  type: string
+                                kind:
+                                  type: string
+                              required:
+                              - apiVersion
+                              - kind
+                              type: object
                           required:
                           - healthy
                           - name
