--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
@@ -426,6 +426,17 @@ spec:
                       - type
                       type: object
                     type: array
+                  workloadDefinition:
+                    description: WorkloadDefinition is the definition of a WorkloadDefinition, such as deployments/apps.v1
+                    properties:
+                      apiVersion:
+                        type: string
+                      kind:
+                        type: string
+                    required:
+                    - apiVersion
+                    - kind
+                    type: object
                 required:
                 - healthy
                 - name
