WIP refactor gc func
WIP write gc code

WIP update chart,cmd args

add cleanupRevison func into garbageCollection

add more test

finish unit-test

refactor use func implements

Complete e2e test

WIP rewrite some logic

add func test and rewirte context pointing to func

fix cilint

refactor some function

fix typo

fix ci error

change gc logic

after change gc number, fix all test

add check appRevision collection

WIP finish most code

--- a/charts/vela-core/templates/kubevela-controller.yaml
+++ b/charts/vela-core/templates/kubevela-controller.yaml
@@ -121,6 +121,7 @@ spec:
             - "--disable-caps={{ .Values.disableCaps }}"
             {{ end }}
             - "--system-definition-namespace={{ .Values.systemDefinitionNamespace }}"
+            - "--application-revision-limit={{ .Values.applicationRevisionLimit }}"
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           imagePullPolicy: {{ quote .Values.image.pullPolicy }}
           resources:
