add an overview for end user guide (#1469)
* add an overview for end user guide

end user guide

* add explore section

* finish scale section

* add expose section

* remove trait already contains as built-in feature

* try fix flaky test

--- a/hack/vela-templates/definitions/cpuhpa.yaml
+++ b/hack/vela-templates/definitions/cpuhpa.yaml
@@ -2,14 +2,13 @@ apiVersion: core.oam.dev/v1beta1
 kind: TraitDefinition
 metadata:
   annotations:
-    definition.oam.dev/description: "Configures replicas for your service by patch replicas field."
-  name: scaler
+    definition.oam.dev/description: "configure k8s HPA with CPU metrics for Deployment"
+  name: cpuscaler
   namespace: {{.Values.systemDefinitionNamespace}}
 spec:
   appliesToWorkloads:
     - webservice
     - worker
-  podDisruptive: false
   schematic:
     cue:
       template: |
