--- a/charts/vela-core/templates/defwithtemplate/sidecar.yaml
+++ b/charts/vela-core/templates/defwithtemplate/sidecar.yaml
@@ -3,22 +3,23 @@ apiVersion: core.oam.dev/v1beta1
 kind: TraitDefinition
 metadata:
   annotations:
-    definition.oam.dev/description: "Configures replicas for your service by patch replicas field."
-  name: scaler
+    definition.oam.dev/description: "inject a sidecar container into your app"
+  name: sidecar
   namespace: {{.Values.systemDefinitionNamespace}}
 spec:
   appliesToWorkloads:
     - webservice
     - worker
-  podDisruptive: false
   schematic:
     cue:
-      template: |
+      template: |-
         patch: {
-        	spec: replicas: parameter.replicas
+        	// +patchKey=name
+        	spec: template: spec: containers: [parameter]
         }
         parameter: {
-        	//+short=r
-        	replicas: *1 | int
+        	name:  string
+        	image: string
+        	command?: [...string]
         }
         
