--- a/hack/vela-templates/definitions/sidecar.yaml
+++ b/hack/vela-templates/definitions/sidecar.yaml
@@ -2,14 +2,13 @@ apiVersion: core.oam.dev/v1beta1
 kind: TraitDefinition
 metadata:
   annotations:
-    definition.oam.dev/description: "Configures replicas for your service by patch replicas field."
-  name: scaler
+    definition.oam.dev/description: "inject a sidecar container into your app"
+  name: sidecar
   namespace: {{.Values.systemDefinitionNamespace}}
 spec:
   appliesToWorkloads:
     - webservice
     - worker
-  podDisruptive: false
   schematic:
     cue:
-      template: |
+      template: |-
