--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_definitionrevisions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_definitionrevisions.yaml
@@ -159,6 +159,41 @@ spec:
                           required:
                           - template
                           type: object
+                        terraform:
+                          description: Terraform is the struct to describe cloud resources managed by Hashicorp Terraform
+                          properties:
+                            configuration:
+                              description: Configuration is Terraform Configuration
+                              type: string
+                            parameter:
+                              description: Parameter is in CUE type, which will contain variable and writeConnectionSecretToRef
+                              type: string
+                            type:
+                              default: hcl
+                              description: Type specifies which Terraform configuration it is, HCL or JSON syntax
+                              enum:
+                              - hcl
+                              - json
+                              type: string
+                            variable:
+                              type: object
+                              
+                            writeConnectionSecretToRef:
+                              description: WriteConnectionSecretToReference specifies the namespace and name of a Secret to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource.
+                              properties:
+                                name:
+                                  description: Name of the secret.
+                                  type: string
+                                namespace:
+                                  description: Namespace of the secret.
+                                  type: string
+                              required:
+                              - name
+                              type: object
+                          required:
+                          - configuration
+                          - variable
+                          type: object
                       type: object
                     status:
                       description: Status defines the custom health policy and status message for workload
@@ -370,6 +405,41 @@ spec:
                               
                           required:
                           - template
+                          type: object
+                        terraform:
+                          description: Terraform is the struct to describe cloud resources managed by Hashicorp Terraform
+                          properties:
+                            configuration:
+                              description: Configuration is Terraform Configuration
+                              type: string
+                            parameter:
+                              description: Parameter is in CUE type, which will contain variable and writeConnectionSecretToRef
+                              type: string
+                            type:
+                              default: hcl
+                              description: Type specifies which Terraform configuration it is, HCL or JSON syntax
+                              enum:
+                              - hcl
+                              - json
+                              type: string
+                            variable:
+                              type: object
+                              
+                            writeConnectionSecretToRef:
+                              description: WriteConnectionSecretToReference specifies the namespace and name of a Secret to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource.
+                              properties:
+                                name:
+                                  description: Name of the secret.
+                                  type: string
+                                namespace:
+                                  description: Namespace of the secret.
+                                  type: string
+                              required:
+                              - name
+                              type: object
+                          required:
+                          - configuration
+                          - variable
                           type: object
                       type: object
                     status:
