add kubectl vela show in docs

--- a/charts/vela-core/templates/defwithtemplate/ingress.yaml
+++ b/charts/vela-core/templates/defwithtemplate/ingress.yaml
@@ -25,11 +25,6 @@ spec:
   schematic:
     cue:
       template: |
-        parameter: {
-        	domain: string
-        	http: [string]: int
-        }
-        
         // trait template can have multiple outputs in one trait
         outputs: service: {
         	apiVersion: "v1"
@@ -70,5 +65,13 @@ spec:
         			}
         		}]
         	}
+        }
+        
+        parameter: {
+        	// +usage=Specify the domain you want to expose
+        	domain: string
+        
+        	// +usage=Specify the mapping relationship between the http path and the workload port
+        	http: [string]: int
         }
         
