--- a/charts/vela-core/templates/defwithtemplate/sidecar.yaml
+++ b/charts/vela-core/templates/defwithtemplate/sidecar.yaml
@@ -18,8 +18,13 @@ spec:
         	spec: template: spec: containers: [parameter]
         }
         parameter: {
-        	name:  string
+        	// +usage=Specify the name of sidecar container
+        	name: string
+        
+        	// +usage=Specify the image of sidecar container
         	image: string
+        
+        	// +usage=Specify the commands run in the sidecar
         	command?: [...string]
         }
         
