--- a/charts/vela-core/templates/defwithtemplate/cpuhpa.yaml
+++ b/charts/vela-core/templates/defwithtemplate/cpuhpa.yaml
@@ -38,8 +38,14 @@ spec:
         	}
         }
         parameter: {
-        	min:     *1 | int
-        	max:     *10 | int
+        
+        	// +usage=Specify the minimal number of replicas to which the autoscaler can scale down
+        	min: *1 | int
+        
+        	// +usage=Specify the maximum number of of replicas to which the autoscaler can scale up
+        	max: *10 | int
+        
+        	// +usage=Specify the average cpu utilization, for example, 50 means the CPU usage is 50%
         	cpuUtil: *50 | int
         }
         
