--- a/charts/vela-core/templates/defwithtemplate/manualscale.yaml
+++ b/charts/vela-core/templates/defwithtemplate/manualscale.yaml
@@ -18,7 +18,7 @@ spec:
         	spec: replicas: parameter.replicas
         }
         parameter: {
-        	//+short=r
+        	// +usage=Specify the number of workload
         	replicas: *1 | int
         }
         
