--- a/charts/vela-core/templates/defwithtemplate/task.yaml
+++ b/charts/vela-core/templates/defwithtemplate/task.yaml
@@ -34,7 +34,7 @@ spec:
         	}
         }
         parameter: {
-        	// +usage=specify number of tasks to run in parallel
+        	// +usage=Specify number of tasks to run in parallel
         	// +short=c
         	count: *1 | int
         
