--- a/charts/vela-core/templates/defwithtemplate/sidecar.yaml
+++ b/charts/vela-core/templates/defwithtemplate/sidecar.yaml
@@ -15,7 +15,19 @@ spec:
       template: |-
         patch: {
         	// +patchKey=name
-        	spec: template: spec: containers: [parameter]
+        	spec: template: spec: containers: [{
+        		name:    parameter.name
+        		image:   parameter.image
+        		command: parameter.cmd
+        		if parameter["volumes"] != _|_ {
+        			volumeMounts: [ for v in parameter.volumes {
+        				{
+        					mountPath: v.path
+        					name:      v.name
+        				}
+        			}]
+        		}
+        	}]
         }
         parameter: {
         	// +usage=Specify the name of sidecar container
@@ -25,6 +37,12 @@ spec:
         	image: string
         
         	// +usage=Specify the commands run in the sidecar
-        	command?: [...string]
+        	cmd?: [...string]
+        
+        	// +usage=Specify the shared volume path
+        	volumes?: [...{
+        		name: string
+        		path: string
+        	}]
         }
         
