--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Login docker.io
         uses: docker/login-action@v1
         with:
